# intergen

./: .gitattributes  .gitignore  Cargo.toml  DATA_MODEL.md  LICENSE  README.md  config.toml
.cargo/: config.toml
assets/fonts/: README.md
assets/shaders/: color_wavefolder.wgsl
scene-presets/: scene-preset-1772913553794-cube.toml  scene-preset-1772913559529-cube.toml  scene-preset-1772913561838-cube.toml  scene-preset-1772913684876-cube.toml  scene-preset-1772947220215-cube.toml  scene-preset-1772948133607-cube.toml  scene-preset-1773795716438-cube.toml  scene-preset-1774807178361-cube.toml  scene-preset-1774829754129-cube.toml  scene-preset-1774831657580-cube.toml  scene-preset-1774844444107-octahedron.toml  scene-preset-1774844473561-octahedron.toml  scene-preset-1774844666863-octahedron.toml  scene-preset-1774844876705-octahedron.toml
src/: app.rs  blender_export.rs  camera.rs  capture.rs  config.rs  config_effects.rs  control_page.rs  effect_tuner.rs  effects.rs  generation.rs  help_text.rs  lib.rs  main.rs  parameters.rs  polyhedra.rs  presets.rs  recent_changes.rs  runtime_scene.rs  scene.rs  scene_snapshot.rs  timestamp.rs  ui.rs
src/effect_tuner/: lfo.rs  metadata.rs  state.rs  systems.rs
src/effect_tuner/state/: core.rs  helpers.rs  numeric_entry.rs  parameter.rs  scene_parameter.rs  tests.rs
src/polyhedra/: mesh.rs  mod.rs  shapes.rs  spawn.rs
src/presets/: browser.rs  storage.rs  systems.rs
src/scene/: materials.rs  setup.rs  state.rs  tests.rs
src/ui/: layout.rs  spawn.rs  systems.rs  tests.rs  theme.rs  types.rs
tools/blender/: import_intergen_scene.py
