[package]
name = "intergen"
version = "0.2.4"
edition = "2024"
authors = ["Francesco Stablum"]
license = "GPL-3.0-or-later"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.package.bevy_dylib]
opt-level = 0
debug = false
